# python_learning

./: .gitignore  README.md  pyproject.toml  python.sublime-project  python.sublime-workspace
100_days_of_code/: coffee_machine.py  pyproject.toml  readme.md
algorithms/: bubble_sort.py
automate the boring stuff/: Character Picture Grid.py  Fill_the_list.py  count characters.py
automate_the_boring_stuff/: Collatz sequence.py  magic8Ball.py  main.py  readme.md
automation_ideas/: file1.py  readme.md
exercise/: Square every digit.py  comprehensions.py  decode_web_page.py  divisors.py  exercise10.py  extract_digits_reverse_number.py  fibonacci.py  guessing_game_one.py  list_less_than_ten.py  list_overlap.py  multiplication_table.py  odd_even.py  palindrome_number.py  password_generator.py  reverse_word_order.py  rock_paper_scissors.py  rock_paper_scissors2.py  string_lists.py  test.py
experiments/: argparsetutorial.py  file01.py  readme.md
freecodecamp/: ex09.py  ex10.py  main.py  readme.md  test.py  tut_exercise2.py  tut_exercise3.py
interesting code/: count characters.py  exercise6-11.py  exercise6-7.py  exercise9-15.py  password_generator.py  readme.md  remove_duplicates.py  simple-password-generator.py
modules/: import_specific_function.py  import_whole_module.py  pizza.py
pcc_data_visualization/: data_visualization.sublime-workspace  pyproject.toml
python crash course/: 00-index.txt  car.py  city_functions.py  electric-car-my-instance.py  exercise03-04.py  exercise03-08.py  exercise04-01.py  exercise04-02.py  exercise04-03.py  exercise04-04.py  (+89 more)
(+140 files in other folders)
