[tool.poetry]
name = "python_projects"
version = "0.1.0"
description = ""
authors = ["Zoran Topic <zoran1607@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
"colorgram.py" = "^1.2.0"
replit = "^3.2.4"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
