[tool.poetry]
name = "pcc_data_visualization"
version = "0.1.0"
description = "python crash course - tutorial project"
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"
matplotlib = "^3.5.0"
plotly = "^5.4.0"
requests = "^2.26.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
